issue450/test_reduce_log_sum_exp_do_not_keepdims_example_expanded_1.mlir.log
within split at ./issue450/test_reduce_log_sum_exp_do_not_keepdims_example_expanded_1.mlir.decomposed.mlir:1 offset :11:10: error: failed to legalize operation 'torch.aten.sum.dim_IntList' that was explicitly marked illegal
    %4 = torch.aten.sum.dim_IntList %1, %3, %false, %none : !torch.vtensor<[3,2,2],f64>, !torch.list<int>, !torch.bool, !torch.none -> !torch.vtensor<[3,2],f64>
         ^
within split at ./issue450/test_reduce_log_sum_exp_do_not_keepdims_example_expanded_1.mlir.decomposed.mlir:1 offset :11:10: note: see current operation: %31 = "torch.aten.sum.dim_IntList"(%28, %30, %5, %4) : (!torch.vtensor<[3,2,2],f64>, !torch.list<int>, !torch.bool, !torch.none) -> !torch.vtensor<[3,2],f64>
